--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,18 @@
   <groupId>adventOfcode</groupId>
   <artifactId>AdventOfCode2016</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+	</dependencies>
 </project>
